2012-09-04  Earnie Boyd  <earnie@users.sourceforge.net>

	More on assuming GCC is greater than or equal to version 3.5.4 and that
	GCC is the only compiler to be used for MinGW.org.

	* include/pbt.h: Remove unneeded filters based on the assumptions.
	* include/powrprof.h: Ditto.
	* include/prsht.h: Ditto.
	* include/psapi.h: Ditto.
	* include/qedit.h: Ditto.
	* include/rapi.h: Ditto.
	* include/ras.h: Ditto.
	* include/rasdlg.h: Ditto.
	* include/raserror.h: Ditto.
	* include/rassapi.h: Ditto.
	* include/reason.h: Ditto.
	* include/regstr.h: Ditto.
	* include/richedit.h: Ditto.
	* include/richole.h: Ditto.
	* include/oleidl.h: Ditto.
	* include/oledlg.h: Ditto.
	* include/olectlid.h: Ditto.
	* include/olectl.h: Ditto.
	* include/oleauto.h: Ditto.
	* include/oleacc.h: Ditto.
	* include/ole2ver.h: Ditto.
	* include/ole2.h: Ditto.
	* include/ole.h: Ditto.
	* include/odbcinst.h: Ditto.
	* include/ocidl.h: Ditto.
	* include/objsel.h: Ditto.
	* include/objsafe.h: Ditto.
	* include/objidl.h: Ditto.
	* include/objfwd.h: Ditto.
	* include/objbase.h: Ditto.
	* include/oaidl.h: Ditto.
	* include/ntsecpkg.h: Ditto.
	* include/ntsecapi.h: Ditto.
	* include/ntldap.h: Ditto.
	* include/ntdsbcli.h: Ditto.
	* include/ntdll.h: Ditto.
	* include/ntdef.h: Ditto.
	* include/nspapi.h: Ditto.
	* include/nddeapi.h: Ditto.
	* include/nb30.h: Ditto.
	* include/mswsock.h: Ditto.
	* include/mshtml.h: Ditto.
	* include/msacm.h: Ditto.
	* include/mq.h: Ditto.
	* include/mprapi.h: Ditto.
	* include/mpegtype.h: Ditto.
	* include/mmsystem.h: Ditto.
	* include/mmreg.h: Ditto.
	* include/mlang.h: Ditto.
	* include/mgmtapi.h: Ditto.
	* include/mgm.h: Ditto.
	* include/mcx.h: Ditto.
	* include/mciavi.h: Ditto.
	* include/math.h: Ditto.
	* include/mapi.h: Ditto.
	* include/lzexpand.h: Ditto.
	* include/lmwksta.h: Ditto.
	* include/lmuseflg.h: Ditto.
	* include/lmuse.h: Ditto.
	* include/lmsvc.h: Ditto.
	* include/lmstats.h: Ditto.
	* include/lmsname.h: Ditto.
	* include/lmshare.h: Ditto.